--- a/Jacob_Kranich_Midterm_Project_325_Spring.ipynb
+++ b/Jacob_Kranich_Midterm_Project_325_Spring.ipynb
@@ -984,7 +984,8 @@
     {
       "cell_type": "code",
       "source": [
-        "voters.loc[voters.registered_voters==voters.registered_voters.max()]"
+        "voters.loc[voters.registered_voters==voters.registered_voters.max()]\n",
+        "#California, in Feb 2020, with 238281 voters registered"
       ],
       "metadata": {
         "id": "vsDudPp-FKQM",
@@ -1146,7 +1147,8 @@
     {
       "cell_type": "code",
       "source": [
-        "voters.registered_voters.mean()"
+        "voters.registered_voters.mean()\n",
+        "#48223.46"
       ],
       "metadata": {
         "id": "xFlNiR5MFK6x",
@@ -1331,7 +1333,8 @@
     {
       "cell_type": "code",
       "source": [
-        "voters.groupby(\"NAME\")[\"registered_voters\"].mean().sort_values(ascending=False).head(3)"
+        "voters.groupby(\"NAME\")[\"registered_voters\"].mean().sort_values(ascending=False).head(3)\n",
+        "#California, Texas, and Florida"
       ],
       "metadata": {
         "id": "xus18i6nFPFE",
@@ -1435,7 +1438,6 @@
         "total_voters = voters.groupby(\"NAME\")[\"registered_voters\"].sum()\n",
         "total_voters1 = total_voters.to_frame()\n",
         "#Used the documentation to write that bit, hope it's ok\n",
-        "total_voters1.head()\n",
         "sns.barplot(total_voters1, x=\"NAME\", y=\"registered_voters\", hue=\"NAME\", palette=\"rainbow\")\n",
         "plt.xlabel(\"State\")\n",
         "plt.ylabel(\"Total Voters Registered\")\n",
@@ -1528,6 +1530,7 @@
         "#Question 1: How did Covid restrictions between 2016 and 2020 affect voter registration?\n",
         "#Question 2: Did this effect differ vis a vis red vs blue states?\n",
         "\n",
+        "#The overall effect of covid on voter registration seems to have been to increase variability, with some extremely high and some low months in each state\n",
         "sns.boxplot(voters, x=\"Year\", y=\"registered_voters\", hue=\"NAME\", palette=\"rainbow\")\n",
         "plt.xlabel(\"State\")\n",
         "plt.ylabel(\"Voters Registered\")\n",
